# wednesday

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  APP_LAYER_AUDIT_2025-12-25.md  CHANGELOG.md  DOMAIN_LAYER_AUDIT_2025-12-23.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  env_example.txt  main.py  mkdocs.yml  new_main.py  pyproject.toml  requirements.txt  worker.py
.github/workflows/: actionlint.yml  ci.yml  coverage-merge.yml  dependency-review.yml  docker-build.yml  junit-merge.yml  mypy.yml  prometheus.yml  pytest-check.yml  pytest.yml  ruff-format.yml  ruff-lint.yml
bot/: base_handlers.py  handlers.py  handlers_admin.py  handlers_models.py  handlers_user.py  support_bot.py  wednesday_bot.py
docs/: API_REFERENCE.md  API_REFERENCE_AUTO.md  APP_LAYER_AUDIT.md  ARCHITECTURE.md  DEPLOYMENT.md  DOMAIN_LAYER_AUDIT.md  INFRA_LAYER_AUDIT.md  INSTALLATION.md  LOKI_PROMTAIL_SCHEMA.md  MONITORING.md  OPERATIONS_CRITICALITY.md  PROJECT_SUMMARY.md  TESTING_GUIDE.md  TYPING_GUIDE.md  index.md  logger_loki_schema.md  logging_loki_validation.md
docs/clients/: adding_endpoints.md
docs/release-notes/: v6.1.0.md  v6.10.0.md  v6.11.0.md  v6.12.0.md  v6.13.0.md  v6.14.0.md  v6.14.1.md  v6.2.0.md  v6.2.1.md  v6.3.0.md  v6.4.0.md  v6.4.1.md  v6.4.2.md  v6.4.3.md  v6.5.0.md  v6.5.1.md  v6.6.0.md  v6.7.0.md  v6.7.1.md  v6.7.10.md  v6.7.11.md  v6.7.12.md  v6.7.13.md  v6.7.2.md  v6.7.3.md  v6.7.4.md  v6.7.5.md  v6.7.6.md  v6.7.7.md  v6.7.8.md  v6.7.9.md  v6.8.0.md  v6.9.0.md
monitoring/: loki-config.yml  promtail-config.yml
monitoring/prometheus/: prometheus.yml
scripts/: celery_healthcheck.py  celery_worker_asyncio.py  docker_run_bot.sh  fix_coverage_paths.py  merge_junit.py  pytest_celery.sh  pytest_e2e.sh  pytest_infra.sh  pytest_integration.sh  pytest_slow.sh  pytest_unit.sh  run_e2e.sh  test_down.sh  test_up.sh  test_volumes.sh
services/: app_settings.py  bot_services.py  celery_app.py  celery_app_test.py  celery_tasks.py  celery_tasks_test.py  container.py  healthcheck.py  image_generator.py  prompt_cache.py  prompt_generator.py  protocols.py  rate_limiter.py  scheduler.py  user_state_store.py
services/application/: __init__.py  admin_dashboard_builders.py  admin_dashboard_service.py  api_status_service.py  database_operations_service.py  dispatch_execution_service.py  dispatch_result.py  dispatch_service.py  fallback_service.py  frog_limit_service.py  frog_requests.py  image_service.py  image_storage_unit_of_work.py  prompt_service.py  scheduler_service.py  target_preparation_service.py
services/base/: __init__.py  base_service.py  exceptions.py  redis_backend_service.py
services/celery/: __init__.py  context.py  task_names.py  tasks.py
services/clients/: __init__.py  base.py  error_handling.py  factory.py  gigachat_config.py  gigachat_text.py  image_client_container.py  interfaces.py  kandinsky.py  kandinsky_config.py  text_client_container.py
services/domain/: caption_service.py  image_generation.py  prompt_fallback_config.py  prompt_generation.py
services/infrastructure/: database_unit_of_work.py
src/: main.py  worker.py
src/app/: admin_access_service.py  admin_command_service.py  admin_dashboard_builders.py  admin_dashboard_service.py  admin_notification_builders.py  admin_notification_service.py  api_status_service.py  bot_notification_builders.py  chat_event_service.py  chat_info_service.py  cleanup_service.py  command_error_handler_service.py  command_validation_service.py  data_cleanup_service.py  database_operations_service.py  dispatch_delivery_service.py  dispatch_execution_service.py  dispatch_result.py  dispatch_service.py  dispatch_targets_helper.py  error_classification_service.py  error_message_formatter_service.py  error_reporting_service.py  fallback_image_delivery_service.py  fallback_service.py  frog_command_service.py  frog_delivery_service.py  frog_limit_service.py  frog_processing_service.py  frog_requests.py  help_message_service.py  idempotency_service.py  image_existence_service.py  image_generation_coordinator.py  image_service.py  image_storage_coordinator.py  model_management_service.py  prompt_service.py  retry_strategy_service.py  target_preparation_service.py  (+2 more)
src/bot/: __init__.py  base_handlers.py  bot_application_factory.py  bot_chat_access_validator.py  bot_constants.py  bot_error_handler.py  bot_handlers_registry.py  bot_lifecycle_manager.py  bot_lifecycle_mixin.py  bot_state_coordinator.py  chat_event_handler.py  handlers_admin.py  handlers_models.py  handlers_support.py  handlers_user.py  new_wednesday_bot.py  support_bot.py  support_bot_handlers_registry.py  wednesday_bot.py
src/domain/: __init__.py  caption_service.py  fallback_prompt_builder.py  image_generation.py  prompt_generation.py  value_objects.py
src/infra/: __init__.py  cleanup_service.py  container.py  healthcheck.py  new_container.py
src/shared/: __init__.py  bot_config.py  bot_services.py  config.py  config_v2.py  constants.py  models.py  paths.py  protocols.py  retry.py
tests/: .env.test  Dockerfile.test  README.md  check_test_quality.py  conftest.py  docker-compose.test.yml  test_smoke_low_coverage.py  test_typing.py
tests/_doubles/: __init__.py  clients.py
tests/_migrations/: keep_imagegenerator_references.md
tests/app/: __init__.py  test_database_operations_service.py  test_dto.py  test_exceptions.py  test_frog_processing_service.py  test_protocols_and_exports.py
tests/bot/: test_handlers.py  test_support_bot.py  test_wednesday_bot.py
tests/common/: celery_app_test.py  celery_tasks_test.py  wait_for_celery.py
tests/domain/: __init__.py  test_domain_caption_service.py  (+1 more)
utils/: admins_repo.py  admins_store.py  chats_repo.py  chats_store.py  config.py  dispatch_registry.py  images_repo.py  images_store.py  logger.py  metrics.py  models_repo.py  models_store.py  paths.py  postgres_client.py  postgres_schema.py  prometheus_metrics.py  prompts_store.py  redis_client.py  retry.py  telegram_retry.py  usage_tracker.py
(+529 files in other folders)
