[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wednesday-tg-bot"
version = "5.0.0"
description = "Telegram-бот Wednesday Frog с расширенной автоматизацией и проверками качества кода."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Wednesday Frog Team" }]
license = { file = "LICENSE" }
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.1",
  "aiohttp_request==0.0.2",
  "aioredis==2.0.1",
  "aiosignal==1.4.0",
  "amqp==5.3.1",
  "anyio==4.11.0",
  "async-timeout==5.0.1",
  "asyncpg==0.31.0",
  "attrs==25.4.0",
  "billiard==4.2.3",
  "celery[asyncio]==5.5.3",
  "certifi==2025.10.5",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "click-didyoumean==0.3.1",
  "click-plugins==1.1.1.2",
  "click-repl==0.3.0",
  "coverage==7.11.3",
  "databases==0.9.0",
  "frozenlist==1.8.0",
  "greenlet==3.2.4",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "iniconfig==2.3.0",
  "kombu==5.5.4",
  "loguru==0.7.3",
  "fastapi==0.115.5",
  "MarkupSafe==3.0.3",
  "multidict==6.7.0",
  "mypy==1.18.2",
  "mypy_extensions==1.1.0",
  "packaging==25.0",
  "pathspec==0.12.1",
  "pillow==12.0.0",
  "pip-review==1.3.0",
  "pluggy==1.6.0",
  "prompt_toolkit==3.0.52",
  "propcache==0.4.1",
  "Pygments==2.19.2",
  "pytest==9.0.0",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "python-telegram-bot==22.5",
  "redis==5.2.1",
  "requests==2.32.5",
  "ruff==0.7.1",
  "setuptools==80.9.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.44",
  "types-requests==2.32.4.20250913",
  "typing_extensions==4.15.0",
  "tzdata==2025.2",
  "urllib3==2.5.0",
  "vine==5.1.0",
  "wcwidth==0.2.14",
  "Werkzeug==3.1.3",
  "wheel==0.45.1",
  "yarl==1.22.0",
  "prometheus_client>=0.20.0",
  "sentry-sdk[fastapi,asyncio]==2.19.2",
  "tenacity>=8.2.3",
  "uvicorn==0.32.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "tests/conftest.py",
]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "B",
  "C4",
  "I",
  "ANN",
  "UP",
  "RUF",
  "PLE",
  "PLR",
  "PLW",
  "COM",
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "W293",
    "PLR0912",  # Too many branches (сложные функции обработчиков)
    "PLR0915",  # Too many statements (сложные функции обработчиков)
    "PLR0914",  # Too many local variables (сложные функции обработчиков)
    "PLR1702",  # Too many nested blocks (сложные функции обработчиков)
    "PLR0911",  # Too many return statements (нормально для обработки ошибок)
    "COM812",
    "TID252",
    "RUF015",
]
fixable = ["ALL"]
unfixable = ["B", "RUF"]  # запрет на refactor фиксы
preview = true

[tool.ruff.lint.isort]
known-first-party = ["bot", "services", "utils", "tests"]
combine-as-imports = true

[tool.ruff.format]
preview = true
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
exclude = "(?x)(^tests/_doubles/|^tests/utils/|^services/celery_app_test\\.py|^services/celery_tasks_test\\.py)"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.conftest"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.celery_app_test"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.celery_tasks_test"
ignore_errors = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN401", "PLR6301", "RUF029", "PLR2004"]
"tests/conftest.py" = ["ANN401", "PLR6301"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (requires running containers)",
]
addopts = "-v -ra --tb=short"
testpaths = ["tests"]
asyncio_mode = "strict"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]
