[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wednesday"
version = "7.0.0"
description = "Telegram bot generating Wednesday frog meme images."
authors = ["freemspwnz"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "app", from = "wednesday" },
  { include = "infra", from = "wednesday" },
  { include = "domain", from = "wednesday" },
  { include = "presentation", from = "wednesday" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# Core bot
aiogram = "^3.17.0"

# HTTP client
httpx = { version = "0.28.1", extras = ["http2"] }

# Async tasks
taskiq = { version = "^0.11.0", extras = ["redis", "metrics"] }

# Database & ORM
redis = "5.2.1"
asyncpg = "0.31.0"
sqlalchemy = { version = "^2.0.44", extras = ["asyncio"] }
alembic = "1.14.1"
greenlet = "^3.4.0"

# Pydantic
pydantic = "2.12.5"
pydantic-settings = ">=2.0.0"

# Metrics & Monitoring & Logging
prometheus_client = "0.23.1"
sentry-sdk = { version = "2.46.0", extras = ["asyncio"] }
loguru = "0.7.3"

# Resilience
tenacity = "9.1.4"
asyncbreaker = "2.0.1"
limits = "5.8.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "9.0.0"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"

# Linting and formatting
mypy = "1.18.2"
ruff = "0.7.1"
junitparser = "4.0.2"

types-redis = "^4.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"

#  Auto generating documentation from docstrings
mkdocstrings = { version = "^0.28.0", extras = ["python"] }

# Checking links
mkdocs-htmlproofer-plugin = "^1.2.0"

# Mermaid diagrams renderer
mkdocs-mermaid2-plugin = "^1.2.1"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["E","F","W","B","C4","I","ANN","UP","RUF","PLE","PLR","PLW","COM"]
ignore = [
  "RUF001","RUF002","RUF003","W293",
  "PLR0912","PLR0915","PLR0914","PLR1702","PLR0911",
  "COM812","TID252","RUF015",
]
fixable = ["ALL"]
unfixable = ["B", "RUF"]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["app", "domain", "infra", "presentation", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN401", "PLR6301", "RUF029", "PLR2004"]

[tool.ruff.format]
preview = true
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
no_implicit_optional = true
strict_equality = true
mypy_path = "wednesday"

[tool.pytest.ini_options]
markers = [
  "unit: быстрые модульные тесты без внешних зависимостей",
  "integration: интеграционные тесты с Postgres/Redis без taskiq e2e",
  "db: тест требует Postgres",
  "redis: тест требует Redis",
  "taskiq: тест требует taskiq worker/beat",
  "e2e: end-to-end сценарии с внешними сервисами",
  "infra: инфраструктурные/диагностические проверки (запуск редко)",
  "slow: долгие сценарии, исключаются из быстрых прогонов",
]
addopts = "-v -ra --tb=short"
testpaths = ["tests"]
pythonpath = ["wednesday"]
asyncio_mode = "strict"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning"
]
